HBX-1766: Replace deprecated 'new Integer(int)' occurrences with 'Integer.valueOf(int)'
Signed-off-by: Koen Aers <koen.aers@gmail.com>